add game flow from start to main game

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Simon</title>
   </head>
   <body>
-    <button id='temp_trigger' type="button" name="button">Click Me!</button>
+
+    <!-- start game button -->
+    <div class="start_btn">
+      <button id='start_btn' type="button" name="button">Start Game!</button>
+    </div>
+
+    <div class="simon_btns">
+      <h1>The main game!</h1>
+      <button id='temp_trigger' type="button" name="button">Click Me!</button>
+
+    </div>
   </body>
 </html>
