add buttons for each color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <div class="simon_btns">
       <h1>The main game!</h1>
-      <button id='temp_trigger' type="button" name="button">Click Me!</button>
+      <button id='red' type="button" name="button" value='red'>Red</button>
+      <button id='blue' type="button" name="button" value='blue'>Blue</button>
+      <button id='green' type="button" name="button" value='green'>Green</button>
+      <button id='yellow' type="button" name="button" value='yellow'>Yellow</button>
 
     </div>
   </body>
